--- a/0617/src/components/Header/header.module.scss
+++ b/0617/src/components/Header/header.module.scss
@@ -1,3 +1,8 @@
+@mixin hover-effect {
+  color: #777;
+  transition: all 0.5s;
+}
+
 .header-lists {
   display: flex;
   padding: 15px 10px;
@@ -6,14 +11,12 @@
   li {
     margin-left: 10px;
     &:hover {
-      color: #777;
-      transition: all 0.5s;
+      @include hover-effect;
     }
     a {
       color: #000;
       &:hover {
-        color: #777;
-        transition: all 0.5s;
+        @include hover-effect;
       }
     }
   }
