--- a/0617/src/styles/global.module.scss
+++ b/0617/src/styles/global.module.scss
@@ -18,3 +18,16 @@ ol {
 a {
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
