--- a/0617/src/components/Header/header.module.scss
+++ b/0617/src/components/Header/header.module.scss
@@ -2,19 +2,34 @@
   color: #777;
   transition: all 0.5s;
 }
+header {
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1); /* 음영 추가 */
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1050px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px 0;
+}
+.logo {
+  font-size: 20px;
+  font-weight: 500;
+  color: #5e0080;
+}
 
 .header-lists {
   display: flex;
-  padding: 15px 10px;
-  justify-content: end;
-  border-bottom: 1px solid #ddd;
   li {
     margin-left: 10px;
     &:hover {
       @include hover-effect;
     }
     a {
-      color: #000;
+      color: #5e0080;
       &:hover {
         @include hover-effect;
       }
