--- a/0617/src/components/Comment/comment.module.scss
+++ b/0617/src/components/Comment/comment.module.scss
@@ -35,6 +35,8 @@
 }
 
 .commentBox {
+  display: flex;
+  flex-direction: column;
   border: 2px solid #e0e0e0;
   border-radius: 6px;
   padding: 10px;
@@ -54,24 +56,22 @@
 //크기조절 텍스트 입력값에따라 늘어나도록
 .commentInput {
   width: 100%;
-  min-height: 100px;
   border: none;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   margin-bottom: 10px;
   resize: none;
   //focus none 안됨
-  & :focus {
+  &:focus {
     outline: none;
   }
 }
-//왜 button이 position처럼 동작하지..?
 .submitButton {
   background-color: #5f0080;
   color: white;
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
-  float: right;
+  align-self: flex-end;
   cursor: pointer;
 }
 
