--- a/0617/src/page/detail/detail.module.scss
+++ b/0617/src/page/detail/detail.module.scss
@@ -119,7 +119,9 @@
   border: 2px solid #e0e0e0;
   border-radius: 6px;
   margin-bottom: 20px;
-  cursor: pointer;
+  a {
+    cursor: pointer;
+  }
 }
 
 .commentBox {
