댓글 기능 만들기  (#26)
* STYLE : 불필요한 코드 삭제

* REMOVE : landing 파일 이동

* REMOVE : header 컴포넌트 common 파일로 이동

* REMOVE : modal 파일 common 폴더로 이동

* REMOVE : 폴더 이동

* FEAT : imgUpload 컴포넌트 생성

* CHORE : 파일명 대소문자 변경에 따른 경로 수정

* FEAT : contextApi 생성

* STYLE & DESIGN : 불필요한 주석 제거 및 cursor효과 제거

* REMOVE : 파일 삭제

* CHORE  : 컴포넌트 분리

* CHORE : 컴포넌트 분리

* STYLE : 불필요한 주석 제거

* FEAT :  imgUpload 기능 구현

* CHORE : state 값 추가

* CHORE : table 이름 변경에 따라 수정

--- a/0617/src/page/detail/detail.module.scss
+++ b/0617/src/page/detail/detail.module.scss
@@ -61,55 +61,12 @@
   }
 }
 
-//댓글
-.commentSection {
+.reviewFormSection {
   max-width: 1050px;
   width: 100%;
   margin: 0 auto;
   padding-top: 80px;
   font-family: Arial, sans-serif;
-}
-
-.commentCount {
-  font-weight: bold;
-  margin-bottom: 10px;
-  padding-bottom: 15px;
-  border-bottom: 1.5px solid #000;
-}
-
-.commentList {
-  padding: 10px;
-}
-
-.userInfo {
-  li {
-    margin: 20px 0;
-    font-size: 14px;
-  }
-}
-
-.username {
-  font-weight: 600;
-  line-height: 19px;
-  color: #333;
-}
-
-.commentText {
-  font-weight: 400;
-  font-size: 14px;
-  color: #333;
-  margin: 10px 0;
-}
-
-.commentCreateAt {
-  font-weight: 400;
-  line-height: 19px;
-  color: #999;
-}
-
-.commentSection {
-  max-width: 1050px;
-  width: 100%;
 }
 
 .loginPrompt {
@@ -119,48 +76,7 @@
   border: 2px solid #e0e0e0;
   border-radius: 6px;
   margin-bottom: 20px;
-  cursor: pointer;
-}
-
-.commentBox {
-  display: flex;
-  flex-direction: column;
-  border: 2px solid #e0e0e0;
-  border-radius: 6px;
-  padding: 10px;
-  div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+  a {
+    cursor: pointer;
   }
-}
-
-.charCount {
-  color: #888;
-  font-size: 14px;
-}
-
-.commentInput {
-  width: 100%;
-  border: none;
-  padding: 10px 10px 10px 0;
-  margin-bottom: 10px;
-  resize: none;
-  &:focus {
-    outline: none;
-  }
-}
-.submitButton {
-  background-color: #5f0080;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  align-self: flex-end;
-  cursor: pointer;
-}
-
-.submitButton:hover {
-  background-color: #4a006a;
 }
