refactor : uploadImg useState 값에 따른 spinner 구현

--- a/0617/src/components/Landing/reviewForm.module.scss
+++ b/0617/src/components/Landing/reviewForm.module.scss
@@ -82,7 +82,8 @@
   color: white;
   border: none;
   border-radius: 4px;
-  padding: 10px 20px;
+  min-width: 63px;
+  min-height: 36px;
   cursor: pointer;
 }
 
